opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
  "Markus Mottl <markus.mottl@gmail.com>"
  "Petter Urkedal <paurkedal@gmail.com>"
]
license: "LGPL-2.1+ with OCaml linking exception"
homepage: "https://mmottl.github.io/postgresql-ocaml"
doc: "https://mmottl.github.io/postgresql-ocaml/api"
dev-repo: "git+https://github.com/mmottl/postgresql-ocaml.git"
bug-reports: "https://github.com/mmottl/postgresql-ocaml/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.05"}
  "dune" {build & >= "1.7.0"}
  "base" {build}
  "stdio" {build}
  "base-bytes"
  "conf-postgresql" {build}
]

synopsis: "Bindings to the PostgreSQL library"

description: """
Postgresql offers library functions for accessing PostgreSQL databases."""
