(library
 (public_name postgresql)
 (foreign_stubs
  (language c)
  (names postgresql_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)
   -O2
   -fPIC
   -DPIC))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries threads bigarray))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
